fixed spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1103,6 +1103,10 @@ select:focus {
 .section-container {
   height: auto;
   min-height: calc(100vh - 65px);
+  padding-top: 10px;
+  padding-bottom: 45px;
+  margin: auto;
+  max-width: 1400px;
 }
 
 .section-block {
@@ -1110,7 +1114,7 @@ select:focus {
 }
 
 .inner-section-block {
-  margin: 20px 10px 0px;
+  margin: 10px;
   border-radius: 10px;
 }
 
