--- a/client/src/components/pageReactSections/stream-chat.css
+++ b/client/src/components/pageReactSections/stream-chat.css
@@ -1,5 +1,5 @@
 .stream-chat-main-container {
-  padding: 0px 5% 20px;
+  padding: 0px 10px;
   display: flex;
   width: 100%;
   box-sizing: border-box;
